--- a/app/src/main/res/layout/dummy_item.xml
+++ b/app/src/main/res/layout/dummy_item.xml
@@ -8,51 +8,60 @@
             type="com.example.soptseminar.data.remote.model.DummyUser" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true">
 
-        <ImageView
-            android:id="@+id/dummy_avatar_imageview"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
-            android:image="@{DummyData.avatar}"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/dummy_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{DummyData.email}"
-            android:textColor="@color/black"
-            android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="@id/dummy_avatar_imageview"
-            app:layout_constraintStart_toEndOf="@id/dummy_avatar_imageview" />
+            <ImageView
+                android:id="@+id/dummy_avatar_imageview"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:image="@{DummyData.avatar}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/dummy_firstName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{DummyData.first_name}"
-            android:textColor="@color/black"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/dummy_email"
-            app:layout_constraintStart_toStartOf="@id/dummy_email"/>
+            <TextView
+                android:id="@+id/dummy_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="@{DummyData.email}"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toEndOf="@id/dummy_avatar_imageview"
+                app:layout_constraintTop_toTopOf="@id/dummy_avatar_imageview" />
 
-        <TextView
-            android:id="@+id/dummy_lastName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{DummyData.last_name}"
-            android:textColor="@color/black"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="@id/dummy_email"
-            app:layout_constraintTop_toBottomOf="@id/dummy_firstName"/>
+            <TextView
+                android:id="@+id/dummy_firstName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@{DummyData.first_name}"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="@id/dummy_email"
+                app:layout_constraintTop_toBottomOf="@id/dummy_email" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/dummy_lastName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@{DummyData.last_name}"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="@id/dummy_email"
+                app:layout_constraintTop_toBottomOf="@id/dummy_firstName" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
